# proofflow

./: .gitignore  .gitmodules  README.md  proof_flow_theorems.json  pyproject.toml
lean_tokenizer/: special_tokens_map.json  tokenizer.json  tokenizer_config.json
lean_tokenizer2/: tokenizer.json
leanproject/: lake-manifest.json  lakefile.toml
proofflow/: data.py  evaluate.py  evaluate_supervised.py  lean_tokenizer.json  main.py  policy.py  proofflow_mamba_test.py  tokenizer.py  train.py  train_gfn.py
proofflow/model/: ffa.py  ffm.py
proofflow/plots/: collapsesmallbatch1.csv  collapsesmallbatch4.csv  criticcompare.py  criticreward.csv  largestsupervised.csv  largestsupervisedepochs.csv  largesupervised.csv  largesupervisedepochs.csv  mean_reward_main_stateskip2.csv  mediumactionlength.csv  mediummaxlength.csv  mediumreward41.csv  mediumreward43.csv  mediumsupervised.csv  mediumsupervisedepochs.csv  nocriticreward.csv  plot_action_length.py  plot_collapsed.py  plot_smoothed_smallskip2.py  plot_stdmean_model.py  plot_supervised_compare.py  smallsupervised.csv  smallsupervisedepochs.csv
sweeps/: config.yml  configlarge.yml  evaluate.yml
tests/: test_mcts.py
